# travel-assistant-ai

backend/: COMANDOS.txt  Dockerfile  Procfile  README.md  itinerary.md  pyproject.toml  railway.json  requirements.txt
backend/db/: chroma.sqlite3
backend/src/travel_crew_backend_app/: crew.py  main.py
frontend/: app.py
frontend/.devcontainer/: devcontainer.json
frontend/src/: app.py
