[project]
name = "travel_crew_backend_app"
version = "0.1.0"
description = "travel_crew_backend_app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
travel_crew_backend_app = "travel_crew_backend_app.main:run"
run_crew = "travel_crew_backend_app.main:run"
train = "travel_crew_backend_app.main:train"
replay = "travel_crew_backend_app.main:replay"
test = "travel_crew_backend_app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
